fix center layout and updated footer

--- a/contato.html
+++ b/contato.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contato
-footer_text: "2025 BSidesRJ - Todos os direitos reservados."
+footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 ---
 <div class="pt-8"></div>
 <main class="container mx-auto px-4 text-white flex-1 py-8">
