updating mail contact

--- a/contato.html
+++ b/contato.html
@@ -32,8 +32,8 @@ footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 			<h2 class="text-2xl font-bold mb-6 text-center">Email</h2>
 			<p class="text-center mb-4">Para dúvidas, sugestões ou parcerias, entre em contato:</p>
 			<div class="flex justify-center">
-				<a href="mailto:contato@bsidesrj.org" class="text-yellow-400 hover:text-yellow-300 text-xl font-semibold">
-					bsides.rj@gmail.com
+				<a href="mailto:contato@bsidesrj.com.br" class="text-yellow-400 hover:text-yellow-300 text-xl font-semibold">
+					contato@bsidesrj.com.br
 				</a>
 			</div>
 		</div>
