--- a/schedule.html
+++ b/schedule.html
@@ -2,9 +2,9 @@
 layout: default
 title: Agenda
 ---
-<main class="container mx-auto px-4 py-16 flex flex-col items-center justify-center">
+<main class="container mx-auto px-4 py-16 flex flex-col items-center">
 	<h1 class="text-4xl font-bold text-center text-yellow-400 mb-12">Agenda</h1>
-	<div class="grid w-full max-w-6xl md:grid-cols-2 lg:grid-cols-4 gap-6">
+	<div class="grid w-full max-w-screen-xl md:grid-cols-2 lg:grid-cols-3 gap-6">
 		{% for stage in site.data.schedule %}
 			<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-4 md:p-6">
 				<h2 class="text-2xl font-bold mb-4 text-center text-white">{{ stage.stage }}</h2>
