--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ include_countdown: true
 				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 					<a href="https://redwolves.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/redwolves.png" | relative_url }}" alt="Red Wolves" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/redwolves.jpg" | relative_url }}" alt="Red Wolves" class="max-h-28">
 					</a>
 				</div>
 			</div>
