--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@ include_countdown: true
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
 				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-					<div></div>
-					<div></div>
+					<a href="https://mobileappdefense.com"
+						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="max-h-28">
+					</a>
 				</div>
 			</div>
 		</div>
